maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: not found: value aMurEst
  a=aMurEst(1,2)
    ^